--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
-
 body {
     height: 4000px;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /* header */
@@ -206,7 +207,7 @@ font-size: 16px;
     text-align: center;
     font-size: 20px;
     width: 90%;
-    margin: 20px auto;
+    margin: 5px auto;
     padding: 0px 20px;
     color: #332519;
 }
@@ -367,4 +368,486 @@ font-size: 16px;
     cursor: pointer;
     margin-top: 25px;
     display: block;
+}
+
+
+.offers {
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+
+.offers h1 {
+    text-align: center;
+    font-size: 40px;
+    width: 100%;
+    padding: 50px 0px;
+    color: #332519;
+    position: relative;
+}
+
+.offers h1::after {
+    content: "";
+    width: 300px;
+    height: 3px;
+    background-color: #654932;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0px 0px 0px;
+}
+
+.offers p {
+    text-align: center;
+    font-size: 20px;
+    width: 90%;
+    margin: 0px auto;
+    padding: 0px 20px;
+    color: #332519;
+}
+
+
+.offers-container {
+    width: 100%;
+    height: 100%;
+    margin: 30px 0px;
+}
+
+.offers-highlights {
+    width: 22%;
+    height: 220px;
+    padding: 20px;
+    border: 2px solid #654932;
+    border-radius: 15px;
+    float: left;
+    margin: 0px 5.55% 35px 5.55%;
+    text-align: center;
+    background-color: #f5f5f5;
+    position: relative;
+}
+
+.offers-highlights::after {
+    content: "";
+    width: 100%;
+    height: 0;
+    
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px;
+}
+
+.offers-highlights:hover::after {
+    background-color: #654932;
+    opacity: 0.1;
+    transition: 0.5s;
+    height: 100%;
+}
+
+.offers-highlights:hover h2{
+    color:#c39066
+}
+    
+.sec2 {
+    margin: 0px 20px;
+}
+
+.highlight-icons {
+    text-align: center;
+    color: #654932;
+}
+
+.offers-highlights h2 {
+    color: #20170f;
+    font-size: 24px;
+    margin: 20px 0px;
+}
+
+.offers-highlights p {
+    font-size: 16px;
+    color: #332519;
+}
+
+.learn-more {
+    text-decoration: none;
+    color: #654932;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 25px;
+    display: block;
+}
+
+/* why choose us section */
+.why-choose-us {
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+
+.why-choose-us h1 {
+    text-align: center;
+    font-size: 40px;
+    width: 100%;
+    padding: 20px 0px 50px 0px;
+    color: #332519;
+    position: relative;
+}
+
+.why-choose-us h1::after {
+    content: "";
+    width: 300px;
+    height: 3px;
+    background-color: #654932;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0px 0px 0px;
+}
+
+.why-choose-us p {
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+    margin: 0px auto 30px auto;
+    padding: 0px 20px;
+    color: #332519;
+}
+
+.why-choose-container {
+    width: 80%;
+    height: 100%;
+    padding: 20px 0px;
+    margin: 0px auto;
+    overflow: hidden;
+}
+
+.why-choose-text {
+    width: 60%;
+    float: left;
+    position: relative;
+    padding: 15px;
+    line-height: 1.5;
+    margin: 100px auto;
+}
+
+.why-choose-text h3 {
+    font-size: 24px;
+    text-align: center;
+    color: #654932;
+    margin-bottom: 15px;
+    position: relative;
+    padding-bottom: 8px;
+}
+
+.why-choose-text ul {
+    list-style-type: none;
+    margin: 20px 0;
+    padding-left: 0;
+}
+
+.why-choose-text ul li {
+    margin-bottom: 12px;
+    padding-left: 0;
+    color: #332519;
+}
+
+.why-choose-image {
+    width: 350px;
+    height: 500px; 
+    float: right;
+    border-radius: 15px;
+    margin: 100px auto;
+}
+
+.why-choose-image img{
+    width: 300px;
+    height: 500px;
+    border-radius: 15px;
+}
+
+.check_icon {
+    color: #654932;
+    margin-right: 20px;
+    margin-left: 50px;
+}
+
+/* Testimonials section */
+.testimonials {
+    width: 100%;
+    height: 100vh;
+    background-color: #a67e5d7e;
+    padding: 50px 0;
+}
+
+.testimonials h1 {
+    text-align: center;
+    font-size: 40px;
+    width: 100%;
+    padding: 20px 0px 50px 0px;
+    color: #20170f;
+    position: relative;
+}
+
+.testimonials h1::after {
+    content: "";
+    width: 300px;
+    height: 3px;
+    background-color: #654932;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0px 0px 0px;
+}
+
+.testimonial-container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.testimonial-card {
+    width: 30%;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    padding: 25px;
+    margin: 20px 0;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+
+.testimonial-card:hover {
+    transform: translateY(-10px);
+}
+
+.testimonial-card img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin: 0 auto 15px;
+    display: block;
+    border: 3px solid #c39066;
+}
+
+.testimonial-card h3 {
+    text-align: center;
+    color: #20170f;
+    margin-bottom: 10px;
+}
+
+.testimonial-card .stars {
+    text-align: center;
+    color: #c39066;
+    margin-bottom: 15px;
+}
+
+.testimonial-card p {
+    color: #332519;
+    font-size: 16px;
+    text-align: center;
+    line-height: 1.6;
+}
+
+/* Contact section */
+.contact {
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+    padding: 50px 0;
+}
+
+.contact h1 {
+    text-align: center;
+    font-size: 40px;
+    width: 100%;
+    padding: 20px 0px 50px 0px;
+    color: #332519;
+    position: relative;
+}
+
+.contact h1::after {
+    content: "";
+    width: 300px;
+    height: 3px;
+    background-color: #654932;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0px 0px 0px;
+}
+
+.contact-container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-info {
+    width: 40%;
+    padding: 20px;
+}
+
+.contact-info h3 {
+    color: #654932;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.contact-info p {
+    color: #332519;
+    margin-bottom: 20px;
+    line-height: 1.6;
+}
+
+.contact-info .contact-details {
+    margin: 30px 0;
+}
+
+.contact-info .contact-details div {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.contact-info .contact-details i {
+    color: #c39066;
+    margin-right: 15px;
+    font-size: 18px;
+}
+
+.contact-form {
+    width: 50%;
+    padding: 20px;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form input, 
+.contact-form textarea {
+    margin-bottom: 15px;
+    padding: 12px;
+    border: 1px solid #c39066;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.contact-form textarea {
+    height: 150px;
+    resize: none;
+}
+
+.contact-form button {
+    background-color: #c39066;
+    color: white;
+    border: none;
+    padding: 12px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    align-self: flex-start;
+}
+
+.contact-form button:hover {
+    opacity: 0.9;
+}
+
+/* Footer */
+footer {
+    background-color: #20170f;
+    color: white;
+    padding: 50px 0 20px;
+}
+
+.footer-container {
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    width: 22%;
+    margin-bottom: 30px;
+}
+
+.footer-section h3 {
+    color: #c39066;
+    margin-bottom: 20px;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.footer-section h3::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 50px;
+    height: 2px;
+    background-color: #c39066;
+}
+
+.footer-section p {
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+.footer-section ul {
+    list-style: none;
+}
+
+.footer-section ul li {
+    margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+    color: #f5f5f5;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer-section ul li a:hover {
+    color: #c39066;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding-top: 30px;
+    border-top: 1px solid #654932;
+    margin-top: 20px;
+}
+
+.social-icons {
+    margin-top: 20px;
+}
+
+.social-icons a {
+    color: white;
+    margin-right: 15px;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: #c39066;
+}
+
+.copyright {
+    font-size: 14px;
+margin-bottom: 10px;
+margin-right: 30px;
+    float: right;
 }
