--- a/css/style.css
+++ b/css/style.css
@@ -666,6 +666,10 @@ footer {
     color: #c39066;
 }
 
+.payment-icons {
+    font-size: 40px;
+}
+
 .copyright {
     font-size: 14px;
 margin-bottom: 10px;
