--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
+
 body {
     height: 4000px;
     width: 100%;
@@ -36,12 +37,12 @@ body {
     border-radius: 15px;
     border: 1px solid #563e2b;
     position: relative;
-  background-color: white;
+    background-color: white;
 }
 
 .search-input {
     border: none;
-font-size: 16px;
+    font-size: 16px;
     width: 85%;
     margin-left: 30px;
 }
@@ -72,7 +73,7 @@ font-size: 16px;
     margin: 15px 25px;
 }
 
-.nav-list li{
+.nav-list li {
     display: inline;
     margin: 0px 10px;
 }
@@ -235,7 +236,7 @@ font-size: 16px;
     content: "";
     width: 100%;
     height: 0;
-    
+
     display: block;
     position: absolute;
     top: 0;
@@ -250,10 +251,10 @@ font-size: 16px;
     height: 100%;
 }
 
-.highlights:hover h2{
-    color:#c39066
+.highlights:hover h2 {
+    color: #c39066
 }
-    
+
 .sec2 {
     margin: 0px 20px;
 }
@@ -362,7 +363,7 @@ font-size: 16px;
 
 .view-collection {
     text-decoration: none;
-    color:#c39066;
+    color: #c39066;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
@@ -431,7 +432,7 @@ font-size: 16px;
     content: "";
     width: 100%;
     height: 0;
-    
+
     display: block;
     position: absolute;
     top: 0;
@@ -446,10 +447,10 @@ font-size: 16px;
     height: 100%;
 }
 
-.offers-highlights:hover h2{
-    color:#c39066
+.offers-highlights:hover h2 {
+    color: #c39066
 }
-    
+
 .sec2 {
     margin: 0px 20px;
 }
@@ -565,13 +566,13 @@ font-size: 16px;
 
 .why-choose-image {
     width: 350px;
-    height: 500px; 
+    height: 500px;
     float: right;
     border-radius: 15px;
     margin: 100px auto;
 }
 
-.why-choose-image img{
+.why-choose-image img {
     width: 300px;
     height: 500px;
     border-radius: 15px;
@@ -668,11 +669,12 @@ footer {
 
 .payment-icons {
     font-size: 40px;
+    color: white;
 }
 
 .copyright {
     font-size: 14px;
-margin-bottom: 10px;
-margin-right: 30px;
+    margin-bottom: 10px;
+    margin-right: 30px;
     float: right;
 }
